<resources>
    <string name="app_name">e-Invoicing</string>
    <string name="tcs">Tax&#160;Control&#160;System</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="language">Language</string>
    <string name="login">Login</string>
    <string name="curr_user">Current&#160;user：%s</string>
    <string name="exit">Exit</string>
    <string name="invoice_issuing">Invoice&#160;Issuing</string>
    <string name="invoice_management">Invoice&#160;Management</string>
    <string name="invoice_query">Invoice Query</string>
    <string name="system_management">System&#160;Management</string>
    <string name="date_time" formatted="false">%s\n%s&#160;&#160;%s</string>
    <string name="back">Back</string>
    <string name="tax_item_list">Tax&#160;Item&#160;List</string>
    <string name="name">Name :</string>
    <string name="name_02">Name</string>
    <string name="code">Code :</string>
    <string name="description">Description :</string>
    <string name="parameter">Parameter :</string>
    <string name="tax_rate">Tax Rate :</string>
    <string name="formula_description">Formula&#160;Description :</string>
    <string name="unit">Unit :</string>
    <string name="unit_wu">Unit</string>
    <string name="customer_management">Customer&#160;Management</string>
    <string name="product_management">Product&#160;Management</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="no">No.</string>
    <string name="product_name">Product Name :</string>
    <string name="local_name">Local Name :</string>
    <string name="specification">Specification :</string>
    <string name="price">Price :</string>
    <string name="price_wu">Price</string>
    <string name="fixed_amount">Fixed Amount :</string>
    <string name="purchase">Purchase :</string>
    <string name="adjustment">Adjustment :</string>
    <string name="add_product">Add Product</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_user">Add User</string>
    <string name="edit_user">Edit User</string>
    <string name="edit_product">Edit Product</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="please_input">Please input...</string>
    <string name="please_select">Please select</string>
    <string name="related_tax_items">Related Tax Items :</string>
    <string name="remark">Remark :</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="product_details">Product Details</string>
    <string name="commission">Commission :</string>
    <string name="customer_details">Customer Details</string>
    <string name="user_details">User Details</string>
    <string name="tin">TIN :</string>
    <string name="tel">TEL :</string>
    <string name="city">City :</string>
    <string name="email">Email :</string>
    <string name="address">Address :</string>
    <string name="region">Region :</string>
    <string name="status">Status :</string>
    <string name="remarks">Remarks :</string>
    <string name="national_id">National ID :</string>
    <string name="passport">Passport :</string>
    <string name="id_type">ID Type :</string>
    <string name="id_no">ID No. :</string>
    <string name="registered">Registered</string>
    <string name="unregistered">Unregistered</string>
    <string name="taxpayer_info">Taxpayer Information</string>
    <string name="synchronize">Synchronize</string>
    <string name="statistics">Statistics</string>
    <string name="declaration">Declaration</string>
    <string name="invoice_information_management">Invoice&#160;Information&#160;Management</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="physical_address">Physical Address</string>
    <string name="business_activities">Business Activities</string>
    <string name="main_taxable_activity">Main Taxable Activities</string>
    <string name="next">Next</string>
    <string name="invoice_type">Invoice Type :</string>
    <string name="buyer_info">Buyer Information</string>
    <string name="invoice_no_from">Invoice No From :</string>
    <string name="remaining_invoice">Remaining Invoice :</string>
    <string name="object">Object :</string>
    <string name="language_in_invoice">Language in the invoice :</string>
    <string name="invoice_application">Invoice Application</string>
    <string name="refresh">Refresh</string>
    <string name="invoice_code">Invoice Code :</string>
    <string name="safety_value">Safety Value :</string>
    <string name="remaining_qty">Remaining QTY</string>
    <string name="select_customer">Select Customer</string>
    <string name="select_product">Select Product</string>
    <string name="product_list">Product List</string>
    <string name="quantity">Quantity</string>
    <string name="e_tax">Total Amount(Excl.Tax)</string>
    <string name="i_tax">Total Amount(Incl.Tax)</string>
    <string name="tax_Amount">Tax Amount</string>
    <string name="confirm">Confirm</string>
    <string name="calculate">Calculate</string>
    <string name="purchase_information">Purchase Information</string>
    <string name="preview">Preview</string>
    <string name="print">Print</string>
    <string name="total_vat">Total of VAT :</string>
    <string name="total_fees">Total of Fees</string>
    <string name="total_bpt_f">Total of BPT Final</string>
    <string name="total_bpt_p">Total of BPT Prepayment</string>
    <string name="total_sdl">Total of Stamp Duty-Local</string>
    <string name="total_sdf">Total of Stamp Duty-Federal</string>
    <string name="invoice_no">Invoice No :</string>
    <string name="issuing_date_time">Issuing Date&amp;Time</string>
    <string name="issued_by">Issued by</string>
    <string name="upload_status">Upload Status</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="e_invoice">E-Invoice</string>
    <string name="network_config">Network Configuration</string>
    <string name="user_management">User Management</string>
    <string name="user_name">User Name :</string>
    <string name="real_name">Real Name :</string>
    <string name="role">Role :</string>
    <string name="admin">administrator</string>
    <string name="operator">operator</string>
    <string name="change_password">Change Password</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="yes">Yes</string>
    <string name="no_">No</string>
    <string name="not_active">not active</string>
    <string name="old_password">Old Password :</string>
    <string name="new_password">New Password :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="reset_password">Reset Password</string>
    <string name="server_address">Server Address :</string>
    <string name="server_port">Server Port :</string>
    <string name="upload_address">Upload Address</string>
    <string name="test">Test</string>
    <string name="verify">Verify</string>
    <string name="type">Type</string>
    <string name="url_https_format" formatted="false">https://%s:%s/</string>
    <string name="url_http_format" formatted="false">http://%s:%s/</string>
    <string name="select_invoice">Select Invoice</string>
    <string name="reason">Reason :</string>
    <string name="application_type">Application Type :</string>
    <string name="normal">normal</string>
    <string name="cancelled">cancelled</string>
    <string name="negative">negative</string>
    <string name="wrote_off">wrote off</string>
    <string name="invalid">invalid</string>
    <string name="illegal">illegal</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="application_list">Application List</string>
    <string name="request_type">Request Type</string>
    <string name="request_date">Request Date</string>
    <string name="request_by">Request By</string>
    <string name="DISA">Cancellation</string>
    <string name="NEG">Negative</string>
    <string name="process">Process</string>
    <string name="issue">Issue</string>
    <string name="approve">Approve</string>
    <string name="pass">Pass</string>
    <string name="reject">Rejection</string>
    <string name="to_confirm">Pending for confirmation</string>
    <string name="internal_reject">Internal Rejection</string>
    <string name="pending_approval">Pending for Approval</string>
    <string name="date_from">Date from</string>
    <string name="date_to">Date to</string>
    <string name="request_date_from">Request Date from</string>
    <string name="request_date_to">Request Date to</string>
    <string name="issuing_date_from">Issuing Date from</string>
    <string name="issuing_date_to">Issuing Date to</string>
    <string name="online_declaration">Online Declaration</string>
    <string name="invoice_deadline">Invoice Deadline</string>
    <string name="deadline_date_from">Deadline Date From</string>
    <string name="deadline_date_to">Deadline Date To</string>
    <string name="deadline_date">Deadline Date</string>
    <string name="action">Action</string>
    <string name="tax_type">Tax Type</string>
    <string name="automatic">Automatic</string>
    <string name="compulsory">Compulsory</string>
    <string name="declare">Declare</string>
    <string name="unit_discount_amount">Unit Discount Amount :</string>
    <string name="unit_discount_percentage">Unit Discount Percentage :</string>
    <string name="qty">Qty</string>
    <string name="filter">Filter</string>
    <string name="export">Export</string>
    <string name="amout">Amout :</string>
    <string name="percentage">Percentage :</string>
    <string name="ycuwq_datepicker_cancel">Cancel</string>
    <string name="ycuwq_datepicker_decide">Decide</string>
    <string name="ycuwq_datepicker_hour">H</string>
    <string name="ycuwq_datepicker_minute">m</string>
    <string name="new_invoice">New Invoice</string>
    <string name="request_invoice">Request Invoice</string>
    <string name="approve_invoice">Approve Invoice</string>
    <string name="product_mgt">Product&#160;Mgt</string>
    <string name="customer_mgt">Customer&#160;Mgt</string>
    <string name="tax_item">Tax&#160;Item</string>
    <string name="unit_d_percentage">Unit D Percentage :</string>
    <string name="unit_d_amount">Unit D Amount :</string>
    <string name="t_a">TA(Excl.Tax) :</string>
    <string name="i_t">TA(Incl.Tax) :</string>
    <string name="t_other">Total Other :</string>
    <string name="remaining">Remaining :</string>
    <string name="i_date_time_from">Date From</string>
    <string name="i_date_time_to">Date To</string>
    <string name="preferred_l">Preferred L :</string>
    <string name="physical_site">Physical site :</string>
    <string name="business_act">Business Act :</string>
    <string name="main_t_act">Main T Act :</string>
    <string name="date_query_time">Date&amp;Time :</string>
    <string name="Confirm_the_information">Confirm the information</string>
    <string name="hit1">The username or password is not correct!</string>
    <string name="hit2">Please add product(s)!</string>
    <string name="hit3">Cannot connect to the internet!</string>
    <string name="hit4">The connection is not available!</string>
    <string name="hit5">The invoice issuing is complete!</string>
    <string name="hit6">The product name cannot be empty!</string>
    <string name="hit7">The unit cannot be empty!</string>
    <string name="hit8">It is not linked to tax item!</string>
    <string name="hit47">Are you sure to issue negative invoice?</string>
</resources>