<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:padding="15dp"
        >

        <TextView
            android:id="@+id/back"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/back"
            />


        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/product_management"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/add"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/select"
            android:gravity="center"
            android:text="@string/add"
            />

        <TextView
            android:id="@+id/select"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingStart="15dp"
            android:text="@string/select"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/lighter_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        >


        <CheckBox
            android:id="@+id/all_select"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1.2"
            android:gravity="start|center_vertical"
            android:text="@string/no"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingStart="5dp"
            android:button="@null"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/product_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/local_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/specification"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/unit"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="1dp"
        android:listSelector="@android:color/transparent"
        />


</LinearLayout>